WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182260
Fix crash during canAuthenticateAgainstProtectionSpace
https://bugs.webkit.org/show_bug.cgi?id=182260
Summary
Fix crash during canAuthenticateAgainstProtectionSpace
Alex Christensen
Reported
2018-01-29 13:17:52 PST
Fix crash when cancelling load during canAuthenticateAgainstProtectionSpace
Attachments
Patch
(1.72 KB, patch)
2018-01-29 13:39 PST
,
Alex Christensen
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-01-29 13:39:43 PST
Created
attachment 332575
[details]
Patch
Alex Christensen
Comment 2
2018-01-29 13:58:45 PST
trac.webkit.org/r227754
Radar WebKit Bug Importer
Comment 3
2018-01-29 13:59:15 PST
<
rdar://problem/37000315
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug