Fix crash when during canAuthenticateAgainstProtectionSpace https://bugs.webkit.org/show_bug.cgi?id=182260 <rdar://problem/34911343>

Reviewed by Chris Dumez.

If we have a valid network load with no challenge completion handler and we are
telling it to continue with the challenge handling, something has gone wrong.
Maybe we've just recovered from a crashed network process.  If this happens, do nothing.

* NetworkProcess/NetworkLoad.cpp:
(WebKit::NetworkLoad::continueCanAuthenticateAgainstProtectionSpace):



Canonical link: https://commits.webkit.org/198061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227754 268f45cc-cd09-0410-ab3c-d52691b4dbfc